[package]
name = "nuker0328"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.12.4", features = ["json"] }
serde = { version = "1.0.202", features = ["serde_derive"] }
tokio = { version = "1.37.0", features = ["full"] }
futures = "0.3"
serde_json = "1.0"
ansi_colours = "1.2.2"
ansi_term = "0.12.1"
